2008-03-18  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-03
	* removed obsolete DQM stuff

2008-03-07  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-02
	* fix flashlists and small fix to monitoring 

2008-02-29  Emilio Meschi  <emilio.meschi@cern.ch>

        * tag V01-02-01
	* fixed defaultWebPage crash in halted
	* Now calls explicitly beginJob in configuring
	* call clear of ModuleWebRegistry at halting if present

2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-00
	* add state transition E->F when edm failure detected 
	* added separate flashlists for numerical microstates and legenda
	* split web page in two, moved module description vector to data member
	* use TimeProfilerService to get timing info in web page
	* updated icons
	
2007-11-28  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-01-04
	* added bool flag isRunNumberSetter to toggle use of 
	* setRunNumber/declareRunNumber

2007-10-09  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V01-01-03
	* use clearCounters in enabling to reset all schedule counters via EP
	* addded boolean flag to use/not use PrescaleService 
	
2007-10-09  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V01-01-02
	* fix halting to call detachDqmFromShm only when shm is present

2007-08-14  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-01-00
	* fixed bug in handling state transition in case of bad configuration
	* removed PLUGIN_PATH from web page
	* removed MonitorDaemon initialization (obsolete)
	* added reasonForFailed to web page
	* mispace -> monitorInfoSpace_

2007-07-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-00-05
	* create monitorable infospace the xdaq3.9 (xmas) way

2007-03-26  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-11-02
	* compliant with edm::EventProcessor for pre2
	* based on evf::StateMachine provided by EventFilter/Utilities
	V00-12-00
	* stopping and halting logic now should function properly
